kubernetes/overlays/homelab/infrastructure/vault-operator/resources/cnp-vault-operator.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vault-operator
  namespace: vault
  labels:
    app.kubernetes.io/name: vault-operator
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vault-operator
  ingress:
    # kubelet health probes
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # Prometheus metrics scraping
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8383"
              protocol: TCP
  egress:
    # Kubernetes API
    - toCIDRSet:
        - cidr: 10.96.0.1/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
