kubernetes/overlays/homelab/infrastructure/vault-operator/resources/networkpolicy-vault-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vault-api-from-cert-manager-and-bootstrap
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vault
      vault_cr: vault
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cert-manager
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: cert-manager
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: vault
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vault-pki-bootstrap
      ports:
        - port: 8200
          protocol: TCP
